--- a/nginx/nginx.yaml
+++ b/nginx/nginx.yaml
@@ -1,14 +1,40 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  labels:
+    app: nginx
+  annotations:
+    metallb.universe.tf/allow-shared-ip: shared
+spec:
+  type: LoadBalancer
+  loadBalancerIP: 192.168.99.103
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      name: http
+      port: 80
+      targetPort: 80
+    - protocol: TCP
+      name: https
+      port: 443
+      targetPort: 443
+#    - name: ssh
+#      port: 22
+#      targetPort: 22
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
-  label:
+  name: nginx
+  labels:
     app: nginx
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
-  replicas: 1
   template:
     metadata:
       labels:
@@ -17,7 +43,8 @@ spec:
       containers:
         - name: nginx
           image: nginx
-          imagePolicy: Never
+          imagePullPolicy: Never
           ports:
             - containerPort: 80
-
+            - containerPort: 443
+#            - containerPort: 22
