nginx, wordpress, phpmyadmin

--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -1,19 +1,23 @@
 FROM  alpine:3.12
 
 RUN apk update && apk upgrade
-RUN apk add nginx openssl openssh-server supervisor vim wget php7 php7-fpm php7-mysqli php7-json ca-certificates
-RUN update-ca-certificates
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/lnymella.key \
- -out /etc/ssl/lnymella.crt -subj "/C=RU/ST=Tatarstan/L=Kazan/O=school21/CN=lnymella"
-RUN mkdir /run/nginx;
-RUN mkdir /www;
+RUN apk add nginx supervisor vim wget php7 php7-fpm php7-opcache php7-gd php7-mysqli php7-ctype php7-zlib php7-curl php7-mbstring php7-json php7-session
+
+#RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/lnymella.key \
+# -out /etc/ssl/lnymella.crt -subj "/C=RU/ST=Tatarstan/L=Kazan/O=school21/CN=lnymella"
+RUN mkdir -p /run/nginx;
+
+#WORKDIR /tmpcat
 
 RUN wget https://wordpress.org/latest.tar.gz
+RUN tar -xvf latest.tar.gz && mv wordpress /var/www/wordpress
 
 COPY default.conf /etc/nginx/nginx.conf
 COPY supervisord.conf /etc/supervisord.conf
-COPY ./wp-config.php /var/www/wordpress/
+COPY wp-config.php /var/www/wordpress/
+#RUN rm -rf wp-config-sample.php
 
+RUN rm -rf latest.tar.gz
 #RUN echo -e "\
 # [supervisord]                                \n\
 # nodaemon=true                                \n\
@@ -28,4 +32,5 @@ COPY ./wp-config.php /var/www/wordpress/
 # " > /etc/supervisord.conf
 
 EXPOSE 5050
+
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisord.conf"]
