--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,12 +1,11 @@
 FROM  alpine:3.12
 
 RUN apk update && apk upgrade
-RUN apk add nginx openssl openssh-server supervisor vim
+RUN apk add nginx openssl openssh supervisor vim
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/lnymella.key \
  -out /etc/ssl/lnymella.crt -subj "/C=RU/ST=Tatarstan/L=Kazan/O=school21/CN=lnymella"
-RUN mkdir /run/nginx;
+RUN mkdir -p /run/nginx;
 RUN mkdir /www;
-
 #RUN echo -e "\
 #server {                                     \n\
 #  listen 443          ssl;                   \n\
@@ -23,16 +22,16 @@ RUN mkdir /www;
 #}" > /etc/nginx/conf.d/default.conf;
 COPY srcs/default.conf /etc/nginx/nginx.conf
 COPY srcs/supervisor.conf /etc/supervisord.conf
-RUN echo -e "<!DOCTYPE html>                 \n\
-<html lang=\"en\">                           \n\
-<head>                                       \n\
-    <meta charset=\"utf-8\" />               \n\
-    <title>HTML5</title>                     \n\
-</head>                                      \n\
-<body>                                       \n\
-    Welcome Back!                            \n\
-</body>                                      \n\
-</html>" > /var/www/index.html;
+COPY server.sh .
+ADD srcs/image.jpg /var/www/image.jpg
+RUN echo -e "<!DOCTYPE html>                                    \n\
+<html>                                                          \n\
+<body> \n\
+<title>NGINX</title> \n\
+<h2>HELLO!!!</h2> \n\
+</body> \n\
+</html> \n\
+" > /var/www/index.html;
 
 # #supervisor
 # RUN echo -e "\
@@ -48,12 +47,11 @@ RUN echo -e "<!DOCTYPE html>                 \n\
 # stderr_logfile=/home/nginxerr.log            \n\
 # " > /etc/supervisord.conf
 
- # create SSH key ssh
- RUN sed -i s/#PermitRootLogin.*/PermitRootLogin\ yes/ /etc/ssh/sshd_config \
-   && echo "root:root" | chpasswd \
-   && /usr/bin/ssh-keygen -A \
-   && ssh-keygen -t rsa -b 4096 -f  /etc/ssh/ssh_host_key
+# # create SSH key ssh
+#RUN sed -i s/#PermitRootLogin.*/PermitRootLogin\ yes/ /etc/ssh/sshd_config \
+#  && echo "root:root" | chpasswd \
+#  && /usr/bin/ssh-keygen -A \
+#  && ssh-keygen -t rsa -b 4096 -f  /etc/ssh/ssh_host_key
 
-EXPOSE 80 443
-#CMD nginx -g 'daemon off;'
-CMD ["/usr/bin/supervisord", "-c", "/etc/supervisord.conf"]
+EXPOSE 80 443 22
+CMD sh server.sh
