--- a/grafana/grafana.yaml
+++ b/grafana/grafana.yaml
@@ -1,19 +1,19 @@
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: grafana-service
+  name: grafana
   annotations:
     metallb.universe.tf/allow-shared-ip: shared
 spec:
   selector:
     app: grafana
   ports:
-    - name: https
-      protocol: TCP
-      port: 3000
+  - name: https
+    protocol: TCP
+    port: 3000
+    targetPort: 3000
   type: LoadBalancer
-  loadBalancerIP: 192.168.99.111
+  loadBalancerIP: 192.168.99.103
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -29,8 +29,8 @@ spec:
         app: grafana
     spec:
       containers:
-        - name: grafana
-          imagePullPolicy: Never
-          image: grafana
-          ports:
-            - containerPort: 3000
+      - name: grafana
+        imagePullPolicy: Never
+        image: grafana
+        ports:
+        - containerPort: 3000
